adicionando efeitos aos botoes

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </header>
     <main>
       <div>
-        <img  class="img" src="color/prata.jpeg" alt="Carro na cor cinza" id="carro" />
+        <img  class="img" src="color/inicial.jpeg" alt="Carro na cor cinza" id="carro" />
       </div>
       <div>
         <button id="azul"></button>
