--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="styles.css" />
     <title>Decida sua cor</title>
+    <link rel="icon" href="color/imgtitle.png">
   </head>
 
   <body>
