--- a/index.html
+++ b/index.html
@@ -21,8 +21,10 @@
         <button id="branco"></button>
         <button id="preto"></button>
         <button id="cinza"></button>
+      </div>
 
-
+      <div>
+        <button id="imprimir">imprimir</button>
       </div>
     </main>
     <script src="index.js"></script>
