muda label do botao

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       </div>
 
       <div>
-        <button id="imprimir">imprimir</button>
+        <button id="imprimir">imprimir carro</button>
       </div>
     </main>
     <script src="index.js"></script>
